hphp/hack/test/typecheck/constraint_newtype_param_type_2.php
<?hh

newtype A = int;
newtype X<T as arraykey> = T;
type Y<T> = X<T>;

function make(Y<bool> $_): Y<A> {
  return 0;
}
